[tool.poetry]
name = "telegramcrm"
version = "0.1.0"
description = "Telegram bot to manage clients"
authors = ["Daniil <dadyarri@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dotenv = "^0.0.5"
aiogram = "^2.13"
tortoise-orm = "^0.17.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
